<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.migym.ui.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_workout_list"
        android:name="com.example.migym.ui.WorkoutListFragment"
        android:label="@string/workout_list">
        <action
            android:id="@+id/action_workoutList_to_addWorkout"
            app:destination="@id/navigation_add_workout" />
        <action
            android:id="@+id/action_workoutList_to_detail"
            app:destination="@id/workoutDetailFragment">
            <argument
                android:name="workoutId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_add_workout"
        android:name="com.example.migym.ui.AddWorkoutFragment"
        android:label="@string/add_workout" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.migym.ui.WorkoutFragment"
        android:label="@string/title_workout" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.migym.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.migym.ui.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.example.migym.ui.WorkoutDetailFragment"
        android:label="@string/workout_detail">
        <argument
            android:name="workoutId"
            app:argType="long" />
    </fragment>

</navigation> 